# git-clean

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
release/: git-clean  release.sh
src/: app.rs  branches.rs  cli.rs  commands.rs  error.rs  lib.rs  main.rs  options.rs
tests/: deletion.rs  local.rs  remote.rs  support.rs  tests.rs  utility.rs
